# MCP-InsightEngine

./: .gitignore  README.md  insights.py  main.py  mcp_server.py  parser.py  pyproject.toml  requirements.txt  visualizer.py
